# alpaqa

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  pyproject.toml
.github/workflows/: build.yml  linux.yml  matlab.yml  wheel-short-test.yml  wheel.yml
1.0.0a19/Coverage/: cmd_line  index-sort-l.html  index.html
1.0.0a19/Doxygen/: C_09_09_2Advanced_2lasso-fbs_8cpp-example.html  C_09_09_2CasADi_2Rosenbrock_2main_8cpp-example.html  C_09_09_2CustomControlCppProblem_2main_8cpp-example.html  C_09_09_2CustomCppProblem_2main_8cpp-example.html  C_09_09_2DLProblem_2main_8cpp-example.html  C_09_09_2FortranProblem_2main_8cpp-example.html  C_09_09_2SimpleUnconstrProblem_2main_8cpp-example.html  CasADiControlProblem_8cpp.html  CasADiControlProblem_8cpp__incl.map  CasADiControlProblem_8cpp__incl.md5  CasADiControlProblem_8cpp_source.html  CasADiControlProblem_8hpp.html  CasADiControlProblem_8hpp_source.html  CasADiControlProblem_8tpp.html  CasADiControlProblem_8tpp_source.html  CasADiFunctionWrapper_8hpp.html  CasADiFunctionWrapper_8hpp__incl.map  CasADiFunctionWrapper_8hpp__incl.md5  CasADiFunctionWrapper_8hpp_source.html  CasADiLoader-util_8hpp.html  CasADiLoader-util_8hpp__incl.map  CasADiLoader-util_8hpp__incl.md5  CasADiLoader-util_8hpp_source.html  CasADiProblem_8cpp.html  CasADiProblem_8cpp__incl.map  CasADiProblem_8cpp__incl.md5  CasADiProblem_8cpp_source.html  CasADiProblem_8hpp.html  CasADiProblem_8hpp__incl.map  CasADiProblem_8hpp__incl.md5  CasADiProblem_8hpp_source.html  CasADiProblem_8tpp.html  CasADiProblem_8tpp_source.html  CompleteCasADiProblem_8cpp.html  CompleteCasADiProblem_8cpp__incl.map  CompleteCasADiProblem_8cpp__incl.md5  CompleteCasADiProblem_8cpp_source.html  CompleteCasADiProblem_8hpp.html  CompleteCasADiProblem_8hpp__incl.map  CompleteCasADiProblem_8hpp__incl.md5  (+1253 more)
1.0.0a19/Sphinx/: genindex.html  objects.inv  output.txt  searchindex.js
1.0.0a20/Coverage/: index-sort-l.html
1.0.0a20/Doxygen/: C_09_09_2CasADi_2Rosenbrock_2main_8cpp-example.html  C_09_09_2CustomCppProblem_2main_8cpp-example.html  C_09_09_2DLProblem_2main_8cpp-example.html  C_09_09_2FortranProblem_2main_8cpp-example.html  C_09_09_2SimpleUnconstrProblem_2main_8cpp-example.html  CasADiControlProblem_8cpp.html  CasADiControlProblem_8cpp__incl.map  CasADiControlProblem_8hpp__incl.map  CasADiControlProblem_8hpp_source.html  CasADiControlProblem_8tpp.html  CasADiControlProblem_8tpp_source.html  CasADiFunctionWrapper_8hpp.html  CasADiFunctionWrapper_8hpp__incl.map  CasADiFunctionWrapper_8hpp_source.html  CasADiLoader-util_8hpp_source.html  CasADiProblem_8cpp_source.html  CasADiProblem_8hpp_source.html  CasADiProblem_8tpp.html  CompleteCasADiProblem_8hpp__incl.map  Development_8md.html  Examples_8md.html  External-Resources_8md.html  Inner-solvers_8md.html  Installation_8md.html  Math_8md.html  Problem-formulations_8md.html  accelerators_2anderson_8hpp_source.html  accelerators_2lbfgs_8hpp.html  alm-driver_8hpp.html  alm-driver_8hpp_source.html  alm-helpers_8cpp__incl.md5  alm-helpers_8hpp_source.html  alm-helpers_8tpp_source.html  alm_8hpp_source.html  alm_8tpp_source.html  alpaqa_8hpp_source.html  anderson-helpers_8hpp.html  annotated.html  any-ptr_8hpp__incl.md5  any-ptr_8hpp_source.html  (+765 more)
1.0.0a20/Sphinx/: changelog.html  genindex.html  objects.inv  py-modindex.html  searchindex.js
Coverage/: cmd_line  index.html
Doxygen/: C_09_09_2Advanced_2lasso-fbs_8cpp-example.html  C_09_09_2CustomControlCppProblem_2main_8cpp-example.html  CasADiControlProblem_8cpp__incl.md5  CasADiControlProblem_8cpp_source.html  CasADiControlProblem_8hpp.html  CasADiControlProblem_8hpp__incl.md5  CasADiFunctionWrapper_8hpp__incl.md5  CasADiLoader-util_8hpp.html  CasADiLoader-util_8hpp__incl.map  CasADiProblem_8cpp.html  CasADiProblem_8cpp__incl.map  CasADiProblem_8hpp.html  CasADiProblem_8hpp__incl.md5  CasADiProblem_8tpp_source.html  CompleteCasADiProblem_8cpp.html  CompleteCasADiProblem_8cpp_source.html  CompleteCasADiProblem_8hpp.html  CompleteCasADiProblem_8hpp__incl.md5  CompleteCasADiProblem_8hpp_source.html  Profiling_8md.html  Python_2simple_optimization_2getting-started_8py-example.html  Python_2simple_optimization_2rosenbrock_8py-example.html  accelerators_2anderson_8hpp.html  accelerators_2lbfgs_8hpp_source.html  alloc-check_8hpp.html  alloc-check_8hpp_source.html  alm-helpers_8cpp.html  alm-helpers_8cpp__incl.map  alm-helpers_8cpp_source.html  alm-helpers_8hpp.html  alm-helpers_8tpp.html  alm_8cpp.html  alm_8cpp_source.html  alm_8hpp.html  alm_8tpp.html  alpaqa-driver_8cpp.html  alpaqa-driver_8cpp__incl.md5  alpaqa-driver_8cpp_source.html  alpaqa_8dox.html  alpaqa_8hpp.html  (+725 more)
Doxygen/search/: all_11.js  all_14.js  all_3.js  all_4.js  all_5.js  all_8.js  classes_10.js  classes_4.js  defines_3.js  defines_4.js  files_3.js  functions_4.js  functions_5.js  functions_6.js  functions_d.js  typedefs_12.js  variables_14.js  variables_2.js  variables_5.js  variables_e.js
Sphinx/: doxygen.html  index.html  mat-modindex.html  output.txt  search.html
Sphinx/examples/: index.html  lasso.html
Sphinx/reference/: cmake-api.html  matlab-api.html
Sphinx/shared/: definitions.html
Sphinx/usage/: tips-and-tricks.html
cmake/toolchain/: pico.cmake
docs/notes/: vec.tex
doxygen/pages/: Installation.md  Pico.md  Problem-formulations.md
doxygen/scripts/: gen-docs.sh
examples/: examples.dox
examples/C++/Advanced/: CMakeLists.txt  custom-config.hpp  custom-config.tpp  custom-vec-type.cpp
examples/problems/: CMakeLists.txt  python-loader.cpp  sparse-logistic-regression.cpp
interfaces/python/: CMakeLists.txt
pi-pico/Coverage/: cmd_line  index-sort-l.html  index.html
pi-pico/Doxygen/: C_09_09_2Advanced_2lasso-fbs_8cpp-example.html  C_09_09_2CasADi_2Rosenbrock_2main_8cpp-example.html  C_09_09_2CustomControlCppProblem_2main_8cpp-example.html  C_09_09_2CustomCppProblem_2main_8cpp-example.html  CasADiControlProblem_8cpp.html  (+1412 more)
python/: README.rst
python/alpaqa-debug/: pyproject.toml
scripts/: install-eigen.sh
src/: CMakeLists.txt
test/: CMakeLists.txt
test_package/: CMakeLists.txt
(+730 files in other folders)
