[project]
name = "alpaqa-debug"
readme = "README.rst"
requires-python = ">=3.8"
license = { "file" = "../../LICENSE" }
authors = [{ "name" = "Pieter P", "email" = "pieter.p.dev@outlook.com" }]
keywords = []
classifiers = []
dependencies = ["alpaqa==1.0.0a20"]
version = "1.0.0a20"
description = "Debug symbols for the alpaqa package."

[project.urls]
"Documentation" = "https://kul-optec.github.io/alpaqa"
"Source" = "https://github.com/kul-optec/alpaqa"
"Bug Tracker" = "https://github.com/kul-optec/alpaqa/issues"

[build-system]
requires = [
    "py-build-cmake~=0.2.0a12",
    "pybind11==2.13.6",
    "pybind11-stubgen~=2.5",
    "numpy<3",
]
build-backend = "py_build_cmake.build_component"

[tool.py-build-cmake.component]
main_project = "../.."
install_components = ["python_modules_debug"]
install_only = true
